...
        android:layout_marginTop="8dp"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="81dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_logout"
...
