<resources>
    <string name="app_name">Nostalgia Pet Game</string>

    //Main Login Screen
    <string name="non_google_sign_up_txt">Create Acct</string>
    <string name="non_google_login_txt">Login</string>

    //SignIn Info Fragment Strings
    <string name="login_email_id_txt">Email</string>
    <string name="login_password_txt">Password</string>
    <string name="btn_login_txt">Login</string>

    //SignUp Info Fragment Strings
    <string name="register_email_txt">Email</string>
    <string name="register_password_txt">Password (at least 6 characters)</string>
    <string name="btn_register_txt">Register</string>

    //Test Strings
    <string name="test_login_email">a@a.a</string>
    <string name="test_login_password">123456</string>
    <string name="btn_shower">Shower</string>
    <string name="btn_bathroom">Bathroom</string>
    <string name="btn_play">Play</string>
    <string name="btn_misc">Misc</string>
    <string name="btn_feed">Feed</string>

    <string name="LOGIN_PREFS">games.wantz.spencer.nostalgiapetgame.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">LOGOUT</string>

    //SMS Strings
    <string name="sms_permission_granted">Permission Granted</string>
    <string name="sms_permission_denied">Permission Denied</string>
    <string name="sms_layout_phone_number">Phone Number</string>

</resources>
